--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kelas Video</title>
+  <title>Orilix.net | Kelas Saya</title>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <style>
     :root {
@@ -84,15 +84,16 @@
 </head>
 <body>
 <header>
-  <h1>Platform Kursus Video</h1>
+  <h1>Orilix.net | Akses Kelas</h1>
 </header>
 
 <div class="container">
   <!-- Login -->
   <div id="login" class="box" style="display:none;">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
+    <h2>Masuk ke kelas</h2>
+    <p>Silahkan isi sesuai dengan akun anda</p>
+    <input type="email" id="email" placeholder="Email akun anda" required />
+    <input type="password" id="password" placeholder="Password akun ada" required />
     <button onclick="login()">Login</button>
   </div>
 
