--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <p>Silahkan isi sesuai dengan akun anda</p>
     <input type="email" id="email" placeholder="Email akun anda" required />
     <input type="password" id="password" placeholder="Password akun ada" required />
-    <button onclick="login()">Login</button>
+    <button onclick="login()">Masuk Sekarang</button>
   </div>
 
   <!-- Courses -->
