--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ function renderLessons(){
   const list=document.getElementById("lesson-list");
   list.innerHTML=currentLessons.map((l,i)=>{
     let cls="lesson-item";
-    let icon="□";
-    if(l.status==="completed"){icon="■";cls+=" lesson-completed";}
+    let icon="○";
+    if(l.status==="completed"){icon="●";cls+=" lesson-completed";}
     if(l.status==="in_progress"){icon="▶";cls+=" lesson-inprogress";}
     if(i===currentLessonIndex){cls+=" lesson-active";}
     return `<div class="${cls}" onclick="playLesson(${i})">
