--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ function renderLessons(){
   list.innerHTML=currentLessons.map((l,i)=>{
     let cls="lesson-item";
     let icon="○";
-    if(l.status==="completed"){icon="●";cls+=" lesson-completed";}
-    if(l.status==="in_progress"){icon="▶";cls+=" lesson-inprogress";}
+    if(l.status==="completed"){icon="Telah ditonton《》";cls+=" lesson-completed";}
+    if(l.status==="in_progress"){icon="●";cls+=" lesson-inprogress";}
     if(i===currentLessonIndex){cls+=" lesson-active";}
     return `<div class="${cls}" onclick="playLesson(${i})">
       <span>${icon}</span> ${l.lessons.order_no}. ${l.lessons.title}
