--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 
   <!-- Courses -->
   <div id="courses" class="box" style="display:none;">
-    <h2>Kursus Saya</h2>
+    <h2>Daftar Kursus saya</h2>
+    <p>Berikut daftar kursus yang sudah anda beli</p>
     <div id="courses-grid" class="courses-grid"></div>
   </div>
 
