--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <!-- Login -->
   <div id="login" class="box" style="display:none;">
     <h2>Masuk ke kelas</h2>
-    <p>Silahkan isi sesuai dengan akun anda</p>
+    <h3>Silahkan isi sesuai dengan akun anda</h3>
     <input type="email" id="email" placeholder="Email akun anda" required />
     <input type="password" id="password" placeholder="Password akun anda" required />
     <button onclick="login()">Masuk Sekarang</button>
