--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <!-- Login -->
   <div id="login" class="box" style="display:none;">
     <h2>Masuk ke kelas</h2>
-    <b>Silahkan isi sesuai dengan akun anda</b>
+    <p>Silahkan isi sesuai dengan akun anda</p>
     <input type="email" id="email" placeholder="Email akun anda" required />
     <input type="password" id="password" placeholder="Password akun anda" required />
     <button onclick="login()">Masuk Sekarang</button>
@@ -100,7 +100,7 @@
   <!-- Courses -->
   <div id="courses" class="box" style="display:none;">
     <h2>Daftar Kursus saya</h2>
-    <p>Berikut daftar kursus yang sudah anda beli</p>
+    <b>Berikut daftar kursus yang sudah anda beli</b>
     <div id="courses-grid" class="courses-grid"></div>
   </div>
 
