--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- Courses -->
   <div id="courses" class="box" style="display:none;">
     <h2>Daftar Kursus saya</h2>
-    <b>Berikut daftar kursus yang sudah anda beli</b>
+    <h3>Berikut daftar kursus yang sudah anda beli</h3>
     <div id="courses-grid" class="courses-grid"></div>
   </div>
 
