--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ async function loadCourses(){
       <h3>${course.title}</h3>
       <p>${course.description}</p>
       <p><strong>Nama Instruktur :</strong> ${course.instructor}</p>
-      <button onclick="loadLessons('${course.id}','${course.title}')">Mulai Belajar</button>
+      <button onclick="loadLessons('${course.id}','${course.title}')">Mulai Belajar 》</button>
     </div>`;
   }).join("");
 }
