--- a/index.html
+++ b/index.html
@@ -129,9 +129,13 @@
       height: 100%;
       object-fit: contain;
     }
+    video::-webkit-media-controls-download-button,
+    video::-webkit-media-controls-panel [title="Download"] {
+      display: none !important;
+    }
     .lesson-actions {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       margin-top: 1.5rem;
       gap: 1.5rem;
@@ -236,6 +240,21 @@
         aspect-ratio: 16 / 9;
       }
     }
+    @media (max-width: 480px) {
+      .lesson-content {
+        padding: 1.5rem;
+      }
+      .lesson-actions {
+        flex-direction: column;
+        align-items: stretch;
+      }
+      .lesson-nav {
+        justify-content: space-between;
+      }
+      .icon-btn {
+        padding: 0.6rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -278,7 +297,7 @@
       <div class="lesson-content">
         <h3 id="lesson-title" class="text-xl font-semibold mb-6 tracking-tight"></h3>
         <div class="video-container">
-          <video id="lesson-video" controls autoplay></video>
+          <video id="lesson-video" controls controlsList="nodownload" autoplay></video>
         </div>
         <div class="lesson-actions">
           <div class="lesson-nav">
@@ -293,12 +312,6 @@
               </svg>
             </button>
           </div>
-          <a id="download-video" class="icon-btn" download>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 4V16M12 16L8 12M12 16L16 12" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M4 20H20" stroke="#374151" stroke-width="2" stroke-linecap="round"/>
-            </svg>
-          </a>
         </div>
       </div>
     </div>
@@ -452,9 +465,6 @@ function playLesson(i) {
   const video = document.getElementById("lesson-video");
   video.src = lesson.lessons.video_url;
   video.play();
-  const downloadLink = document.getElementById("download-video");
-  downloadLink.href = lesson.lessons.video_url;
-  downloadLink.download = `${lesson.lessons.title}.mp4`;
   renderLessons();
   markInProgress(lesson.id);
 }
