--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     }
     .chat-container {
       position: fixed;
-      bottom: 2rem;
-      right: 2rem;
+      bottom: 80px;
+      right: 1rem;
       width: 360px;
       height: 500px;
       background: var(--chat-bg);
@@ -200,6 +200,14 @@
       flex-direction: column;
       overflow: hidden;
       z-index: 100;
+      transform: translateY(20px);
+      transition: transform 0.3s ease, opacity 0.3s ease;
+      opacity: 0;
+    }
+    .chat-container.active {
+      display: flex;
+      transform: translateY(0);
+      opacity: 1;
     }
     .chat-header {
       background: var(--primary);
@@ -211,15 +219,19 @@
     }
     .chat-close {
       position: absolute;
-      top: 0.5rem;
+      top: 50%;
       right: 1rem;
+      transform: translateY(-50%);
       color: #fff;
       cursor: pointer;
-      font-size: 1.2rem;
-      transition: color 0.3s;
+      font-size: 1.5rem;
+      padding: 0.5rem;
+      transition: color 0.3s, background 0.3s;
+      border-radius: 50%;
     }
     .chat-close:hover {
-      color: #dbeafe;
+      color: #fff;
+      background: rgba(255,255,255,0.2);
     }
     .chat-messages {
       flex: 1;
@@ -376,11 +388,11 @@
         aspect-ratio: 16 / 9;
       }
       .chat-container {
-        width: 100%;
-        height: 100vh;
-        bottom: 0;
-        right: 0;
-        border-radius: 0;
+        width: 90%;
+        max-width: 360px;
+        height: 400px;
+        bottom: 80px;
+        right: 1rem;
       }
       .chat-toggle {
         bottom: 1.5rem;
@@ -414,11 +426,25 @@
         bottom: 0.5rem;
         right: 0.5rem;
       }
+      .chat-container {
+        width: 95%;
+        height: 350px;
+      }
       .chat-input input {
         padding: 0.6rem;
+        font-size: 0.9rem;
       }
       .chat-input button {
         padding: 0.6rem 1rem;
+        font-size: 0.9rem;
+      }
+      .chat-header {
+        padding: 0.8rem;
+        font-size: 1rem;
+      }
+      .chat-close {
+        font-size: 1.2rem;
+        padding: 0.4rem;
       }
     }
   </style>
@@ -682,7 +708,11 @@ function toggleFullScreen() {
 // Live Chat Functionality
 function toggleChat() {
   const chatContainer = document.getElementById("chat-container");
-  chatContainer.style.display = chatContainer.style.display === "flex" ? "none" : "flex";
+  if (chatContainer.classList.contains("active")) {
+    chatContainer.classList.remove("active");
+  } else {
+    chatContainer.classList.add("active");
+  }
 }
 
 function sendMessage() {
